# livespice-dsp-translator

./: .gitignore  AUTOMATED_CALIBRATION_GUIDE.md  CALIBRATION_INTEGRATION_COMPLETE.md  CMakeLists.txt  COMPLETION_REPORT.md  COMPONENT_IMPLEMENTATION_TEMPLATES.md  CircuitAnalyzer.cpp  CircuitAnalyzer.h  CircuitDiagnostics.cpp  CircuitDiagnostics.h  CircuitProcessor.cpp  CircuitProcessor.h  CircuitVisualizer.h  ComponentCharacteristicsDatabase.h  ComponentDSPMapper.h  DIRECTORY_STRUCTURE.txt  DSP_COMPONENT_COVERAGE_REPORT.md  DiodeModels.h  DiodeModels_fixed.h  JuceDSPGenerator.cpp  JuceDSPGenerator.h  LICENSE  LIVESPICE_COMPONENT_ANALYSIS.md  LIVESPICE_INTEGRATION_STATUS.md  LiveSpiceConnectionMapper.h  LiveSpiceParser.cpp  LiveSpiceParser.h  Livespice_to_DSP.cpp  PHASE_1_ALL_TASKS_COMPLETE.md  PHASE_1_NEXT_STEPS.md  PHASE_1_NONLINEAR_MODELING.md  PHASE_2_PLANNING.md  PHASE_2_QUICK_SUMMARY.txt  PHASE_2_STATE_SPACE_FILTERING.md  PHASE_3_COMPLETE_PEDAL.md  PHASE_5_COMPLETE.md  ParameterGenerator.h  QUICK_REFERENCE.md  QUICK_START.md  README.md  (+20 more)
JUCE - Boss Super Overdrive SD-1/: CMakeLists.txt  CircuitProcessor.cpp  CircuitProcessor.h  CircuitProcessorEditor.cpp  CircuitProcessorEditor.h
JUCE - Boss Super Overdrive SD-1.backup/: CircuitProcessor.cpp  CircuitProcessor.h
JUCE - Bridge Rectifier/: CMakeLists.txt  CircuitProcessor.cpp  CircuitProcessor.h
JUCE - Common Cathode Triode Amplifier/: CMakeLists.txt  CircuitProcessor.cpp  CircuitProcessor.h
JUCE - Common Emitter Transistor Amplifier/: CMakeLists.txt  CircuitProcessor.cpp  CircuitProcessor.h
JUCE - MXR Distortion +/: CMakeLists.txt  CircuitProcessor.cpp  CircuitProcessor.h  build_info.py  (+1 more)
LiveSpice-AB-Tester/: ARCHITECTURE_QUICK_REFERENCE.md  BUILD_STATUS.md  CMakeLists.txt  IMPLEMENTATION_ROADMAP.md  README.md  build.ps1  build.sh
LiveSpice-AB-Tester/Source/: ABSwitch.cpp  ABSwitch.h  AudioRouter.cpp  AudioRouter.h  AutomatedCalibrator.cpp  AutomatedCalibrator.h  CalibrationPanel.h  ControlPanel.cpp  ControlPanel.h  IAudioProcessor.h  Logging.h  Main.cpp  MainComponent.cpp  MainComponent.h  ParameterSynchronizer.cpp  PluginHost.cpp  PluginHost.h  PluginHostWrapper.h  ProcessorFactory.cpp  ProcessorFactory.h  SchematicEditorComponent.cpp  SchematicEditorComponent.h  SchematicProcessor.h  SchematicProcessor_new.cpp
LiveSpice-AB-Tester/Source/CircuitProcessors/: MXRDistortionProcessor.cpp
LiveSpice-AB-Tester/build2/: LiveSpice_AB_Tester.slnx
LiveSpice-AB-Tester/build2/LiveSpice_AB_Tester.dir/Release/LiveSpic.6E3B2D9D.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.write.1.tlog
LiveSpice-AB-Tester/build2/LiveSpice_AB_Tester_artefacts/JuceLibraryCode/: Info.txt  LiveSpice_AB_Tester_resources.rc
LiveSpice-AB-Tester/build2/LiveSpice_AB_Tester_artefacts/JuceLibraryCode/Debug/: Defs.txt
LiveSpice-AB-Tester/build2/LiveSpice_AB_Tester_rc_lib.dir/Release/LiveSpic.50823CE5.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Lib-link-cvtres.read.1.tlog  Lib.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
LiveSpice-AB-Tester/build2/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
LiveSpice-AB-Tester/build2/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
LiveSpice-AB-Tester/build2/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
LiveSpice-AB-Tester/build2/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.write.1.tlog
examples/LiveSpice-AB-Tester/: ARCHITECTURE_QUICK_REFERENCE.md  BUILD_STATUS.md  CMakeLists.txt  DOCUMENTATION_INDEX.md  PROJECT_INVENTORY.md  REFACTORED_DESIGN_DOCUMENT.md  REFACTORING_COMPLETE.md  build.ps1  read_log.ps1
examples/LiveSpice-AB-Tester/Source/: ABSwitch.h  AutomatedCalibrator.cpp  AutomatedCalibrator.h  CalibrationPanel.h  CircuitProcessorWrapper.h  MainComponent.cpp  ParameterSynchronizer.cpp  ParameterSynchronizer.h  PluginHost.h  PluginHostWrapper.cpp  SchematicEditorComponent.cpp  SchematicProcessor.cpp  SchematicProcessor_new.cpp
examples/LiveSpice-AB-Tester/Source/CircuitProcessors/: MXRDistortionProcessor.h
examples/LiveSpice-AB-Tester/build2/LiveSpice_AB_Tester.dir/Release/: B Tester.exe.recipe
examples/LiveSpice-AB-Tester/build2/LiveSpice_AB_Tester.dir/Release/LiveSpic.6E3B2D9D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.read.1.tlog  link.secondary.1.tlog
examples/LiveSpice-AB-Tester/build2/LiveSpice_AB_Tester_artefacts/JuceLibraryCode/RelWithDebInfo/: Defs.txt
examples/LiveSpice-AB-Tester/build2/LiveSpice_AB_Tester_rc_lib.dir/Release/: LiveSpice_AB_Tester_rc_lib.lib  LiveSpice_AB_Tester_rc_lib.vcxproj.FileListAbsolute.txt  LiveSpice_AB_Tester_resources.res
examples/LiveSpice-AB-Tester/build2/LiveSpice_AB_Tester_rc_lib.dir/Release/LiveSpic.50823CE5.tlog/: CustomBuild.read.1.tlog  Lib-link-cvtres.write.1.tlog  LiveSpice_AB_Tester_rc_lib.lastbuildstate  rc.command.1.tlog
examples/LiveSpice-AB-Tester/build2/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
(+125 files in other folders)
